--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
     </div>
   </header>
   <main>
-    <img id="apodImage" src="" alt="NASA Image of the Day">
-    <div id="apodInfo">
+    <div class="image-column">
+      <img id="apodImage" src="" alt="NASA Image of the Day">
+    </div>
+    <div class="info-column" id="apodInfo">
       <h2 id="apodTitle"></h2>
       <p id="apodDate"></p>
       <span id="apodExplanation"></span>
     </div>
   </main>
+  
   <script src="script.js"></script>
 </body>
+<footer>
+  <p>made with love by <a href="https://github.com/bypedroneres">Pedro Neres</a></p>
+</footer>
 </html>
