--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="light-mode.css" media="(prefers-color-scheme: light)">
+  <link rel="stylesheet" href="dark-mode.css" media="(prefers-color-scheme: dark)">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
   <title>Image of the Day</title>
 </head>
